--- a/backend/app/Dockerfile
+++ b/backend/app/Dockerfile
@@ -2,11 +2,14 @@ FROM python:3.9-slim-buster
 
 WORKDIR /minute-tutor/backend
 
-COPY requirements.txt .
-
+COPY . .
+# COPY requirements.txt .
+ENV FLASK_APP=app.py
 RUN pip3 install -r requirements.txt
 
 COPY . .
+
+COPY . /app
 
 CMD ["flask", "run", "--host=0.0.0.0"]
 
